--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>responsive personal portfolio website design tutorail</title>
+    <title>Rikka's Website : Made With Love!</title>
+    <link rel="icon" href="image/rikka_takanashi_vector_by_belmont012_d5k22kj_yFE_icon.ico">
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
