--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <ul>
             <li><a href="#home">home</a></li>
             <li><a href="#about">about</a></li>
-            <li><a href="#education">education</a></li>
-            <li><a href="#portfolio">profiles...</a></li>
+            <li><a href="#education">Stats</a></li>
+            <li><a href="#portfolio">profiles</a></li>
             <li><a href="#contact">contact me?</a></li>
         </ul>
     </nav>
@@ -231,13 +231,8 @@
 
 </section>
 
-
-<!-- scroll top button  -->
-
-<a href="#home" class="top">
-    <img src="images/scroll-top-img.png" alt="">
-</a>
-
+<h1 class="heading"> made with <span>Love</span> by <span>Rikka!</span></h1>
+<br>
 
 
 
