--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <ul>
             <li><a href="#home">home</a></li>
             <li><a href="#about">about</a></li>
-            <li><a href="#education">Stats</a></li>
-            <li><a href="#portfolio">profiles</a></li>
+            <li><a href="#stats">Stats</a></li>
+            <li><a href="#profiles">profiles</a></li>
             <li><a href="#contact">contact me?</a></li>
         </ul>
     </nav>
@@ -39,7 +39,7 @@
 
 <div id="menu" class="fas fa-bars"></div>
 
-<!-- home section starts  -->
+<!-- home -->
 
 <section class="home" id="home">
 
@@ -51,7 +51,7 @@
 
 </section>
 
-<!-- about section starts  -->
+<!-- about -->
 
 <section class="about" id="about">
 
@@ -95,9 +95,9 @@
 
 </section>
 
-<!-- education section starts  -->
+<!-- stats -->
 
-<section class="education" id="education">
+<section class="s" id="s">
 
 <h1 class="heading"> my <span>Stats</span> </h1>
 
@@ -152,9 +152,9 @@
 
 </section>
 
-<!-- portfolio section starts  -->
+<!-- profiles -->
 
-<section class="portfolio" id="portfolio">
+<section class="profiles" id="profiles">
 
 <h1 class="heading"> my <span>profiles</span> </h1>
 
@@ -196,7 +196,7 @@
 
 </section>
 
-<!-- contact section starts  -->
+<!-- contact -->
 
 <section class="contact" id="contact">
 
@@ -230,10 +230,8 @@
 
 </section>
 
-<h1 class="heading"> made with <span>Love</span> by <span>Rikka!</span></h1>
+<h1 class="footer"> made with <span>Love</span> by <span>Rikka!</span></h1>
 <br>
-
-
 
 
 
