--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 <!-- stats -->
 
-<section class="s" id="s">
+<section class="stats" id="stats">
 
 <h1 class="heading"> my <span>Stats</span> </h1>
 
